--- a/A1Style.css
+++ b/A1Style.css
@@ -1,7 +1,7 @@
 body {
     color: white;
     font: 18px Avenir;
-    background: url(http://getwallpapers.com/wallpaper/full/8/a/f/1328589-widescreen-phoenix-suns-wallpaper-hd-1920x1080.jpg) blue;
+    background: url(http://getwallpapers.com/wallpaper/full/8/a/f/1328589-widescreen-phoenix-suns-wallpaper-hd-1920x1080.jpg);
 }
 
 #main {
